# music_recommendation_app

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: server.py
app/core/: config.py  setup.py
app/models/: logging.py
app/static/postgres/: postgres.Dockerfile
app/utils/: common.py
music_rec/: server.py  streamlit_frontend.py
music_rec/api/: pgsql.py
music_rec/api/audio_api_custom/: reference_recom.py
music_rec/api/langchain_custom/: text2sql.py
music_rec/core/: config.py  setup.py
music_rec/models/: model.py
music_rec/routes/: sql.py  upsert.py
music_rec/static/images/: log_analyzer.drawio
scripts/: build_docker.sh  download_spotify_million.py  poetry_to_pip_requirements.py  run_docker.sh
tests/: requirements.txt
