[project]
name = "music-rec"
version = "0.1.0"
description = "Music Recommendation App"
authors = [
    {name = "SamSamhuns",email = "samhunsadamant@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "psycopg-binary (>=3.2.10,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "spotipy (>=2.25.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

